--- a/.documentation/index.js.html
+++ b/.documentation/index.js.html
@@ -84,6 +84,7 @@ Studio.plugin = Studio.plugins || {};
  * @param {String} options.defaultNamespace the module name which will prepend the service automatically instantiated for browser access. Defaults to __browser
  * @param {String} options.serviceCallEventName The name of the channel used to communicate the services. Defaults to __studio_service_call
  * @param {String} options.ip Server address (format: http://SOMEADDRESS:SOMEPORT/). Defaults to socket.io default
+ * @param {String} options.io socket io client object (add this if you dont want to pass ip:port)
  * @default {
 		defaultNamespace:'__browser',
 		serviceCallEventName:'__studio_service_call'
@@ -96,7 +97,7 @@ function BrowserClient(options){
 	options = options || {};
 	options.defaultNamespace = options.defaultNamespace || DEFAULT_NAMESPACE;
 	options.serviceCallEventName = options.serviceCallEventName || DEFAULT_SERVICE_CALL_EVENT_NAME;
-	socket = io(options.ip);
+	socket = options.io || io(options.ip);
 	return function(serviceListener,Studio){
 		serviceListener.onStart(function(serv){localServices[serv.id] = true; });
         serviceListener.onStop( function(serv){localServices[serv.id] = false;});
